--- a/generic.html
+++ b/generic.html
@@ -42,15 +42,15 @@
 							<p>01.01.2017</p>
 						</header>
 						<div class="content">
-							<p>Ac pretium parturient et scelerisque dis pulvinar nascetur suspendisse justo parturient est quis adipiscing nisi dis eu ullamcorper. Penatibus aliquet vestibulum dis pretium a ullamcorper accumsan facilisis elit ullamcorper porttitor dictumst per a a potenti interdum fusce a adipiscing nostra ac parturient. Proin a imperdiet at a scelerisque quam et at ante aenean per per faucibus senectus lobortis mi tincidunt a penatibus. Mauris vestibulum aliquet parturient odio dapibus euismod a mi ullamcorper maecenas turpis non scelerisque nibh fermentum natoque erat parturient suspendisse a magna curabitur cum.</p>
+							
 
-							<p>Aliquet a consectetur semper suscipit ridiculus mattis augue volutpat hendrerit proin hac vel tristique quis amet parturient sem. Adipiscing laoreet blandit vestibulum laoreet fermentum sed sociis lorem class ipsum scelerisque porttitor viverra vestibulum nascetur. Ad felis ad ullamcorper urna iaculis aenean vel a suspendisse nunc placerat euismod suspendisse et fames ipsum elementum odio vestibulum duis. Fringilla condimentum donec tincidunt enim volutpat nam velit quisque laoreet adipiscing nam in suspendisse mattis ad libero parturient scelerisque. Vitae enim ac parturient iaculis pharetra cum quam imperdiet commodo mus netus quam habitasse risus netus dis.</p>
+							<p>Aos 10 anos começou a aprender a tocar, brincando de música com seu irmão gêmeo bivitelino Bhaskar Petrillo. Em 2004, ele e seu irmão frequentavam a rádio de seu pai, onde tocava bateria de panela. Segundo seu pai, eles ficaram interessados em como os remixes eram feitos e com a ajuda dos DJ's, amigos da família, ensinaram os irmãos a mixar as músicas, e cada um aprendeu uma especialidade, um no teclado e o outro na guitarra. Logo depois, Dick Trevor, instalou o programa de edição de música Logic Pro no computador, fazendo com que os irmãos se aproximassem ainda mais da produção de músicas.</p>
+							<p>Em 2010 ele começou a trabalhar na sua carreira solo, migrando do psy trance para o house music. Segundo ele, seus pais não concordaram com a mudança: "era um cenário diferente, no qual eles não tinham muito conhecimento e visibilidade. Eu estava saindo da zona de conforto deles", disse. Portanto, ele ainda continuou sozinho no Lógica durante um tempo, quando Bhaskar decidiu deixar a dupla depois de casar.
 
-							<p>Arcu est vestibulum condimentum conubia tempus a porttitor quam urna adipiscing a adipiscing condimentum tortor cubilia parturient per senectus interdum felis suspendisse penatibus auctor pretium ac. Potenti at suspendisse et a scelerisque porttitor hac et vitae adipiscing mi et vestibulum eros scelerisque vivamus fames ac nisl venenatis tellus fusce diam. Suspendisse at rhoncus proin turpis venenatis sit a porttitor mauris natoque parturient senectus class a posuere velit. Bibendum netus dictum euismod a ullamcorper quis dapibus diam consectetur imperdiet commodo ac parturient ut vestibulum a duis condimentum mauris vel himenaeos dignissim.</p>
+							Seu primeiro sucesso como projeto solo foi um sample da música "Sings" do Snoop Dogg com participação de Charlie Wilson e Justin Timberlake, chamada de "Snoop Sings" com Icy Sasaki. 
 
-							<p>A adipiscing a ac aliquet elit a senectus feugiat litora condimentum dignissim ullamcorper conubia venenatis torquent consectetur dui aptent dignissim condimentum suspendisse. A fusce vel a condimentum ad adipiscing id imperdiet justo sit dapibus a dis a consequat dis nisl volutpat a rutrum feugiat penatibus tristique aliquam consectetur nam dignissim. Convallis nibh habitasse montes venenatis duis aliquam lobortis condimentum consectetur facilisis non adipiscing a eget a.</p>
+							Em 4 de junho de 2013 a música suas músicas foram lançada em seu perfil no Soundcloud, disponivelpara audições na plataforma.</p>
 
-							<p>Penatibus vestibulum ullamcorper diam commodo volutpat at a sodales dis id ut condimentum a arcu at nostra pretium urna suspendisse. Maecenas commodo adipiscing ad curabitur a a risus pulvinar habitant a et integer volutpat mi nullam curabitur a adipiscing nullam in bibendum vel cras scelerisque. Morbi a euismod litora dui nunc in pretium sodales ante dis dui natoque adipiscing a. Augue imperdiet dignissim adipiscing justo accumsan adipiscing vestibulum adipiscing fames class ad rutrum sociosqu ad auctor sodales dis mollis. Ac euismod enim ad viverra dui auctor at integer inceptos parturient mi convallis aliquet iaculis ad diam.</p>
 						</div>
 						<footer>
 							<ul class="actions">
@@ -71,7 +71,7 @@
 					<form action="#" method="post">
 
 						<div class="field half first">
-							<label for="name">Name</label>
+							<label for="name">Nome</label>
 							<input name="name" id="name" type="text" placeholder="Name">
 						</div>
 						<div class="field half">
@@ -79,7 +79,7 @@
 							<input name="email" id="email" type="email" placeholder="Email">
 						</div>
 						<div class="field">
-							<label for="message">Message</label>
+							<label for="message">Messagem</label>
 							<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
 						</div>
 						<ul class="actions">
