change photos and text

--- a/generic.html
+++ b/generic.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Road Trip by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 	<head>
-		<title>Generic - Road Trip by TEMPLATED</title>
+		<title>Dj Queir'Oz</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,16 +11,16 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Road Trip <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="index.html">DJ Queir'oZ <span>Alegria na Sua Pista</span></a></div>
 				<a href="#menu"><span>Menu</span></a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="index.html">INICIO</a></li>
+					<li><a href="elements1.html">MÚSICA</a></li>
+					<li><a href="elements.html">AGENDA</a></li>
 				</ul>
 			</nav>
 
@@ -38,8 +34,8 @@
 				<div class="inner">
 					<article class="box">
 						<header>
-							<h2>Nibh non lobortis mus nibh</h2>
-							<p>01.01.2017</p>
+							<h2>MAIS SOBRE DJ Queir'OZ</h2>
+							<p></p>
 						</header>
 						<div class="content">
 							
@@ -66,13 +62,13 @@
 			<footer id="footer">
 				<div class="inner">
 
-					<h2>Contact Me</h2>
+					<h2>CONTATO</h2>
 
 					<form action="#" method="post">
 
 						<div class="field half first">
 							<label for="name">Nome</label>
-							<input name="name" id="name" type="text" placeholder="Name">
+							<input name="name" id="name" type="text" placeholder="Nome">
 						</div>
 						<div class="field half">
 							<label for="email">Email</label>
@@ -80,10 +76,10 @@
 						</div>
 						<div class="field">
 							<label for="message">Messagem</label>
-							<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
+							<textarea name="message" id="message" rows="6" placeholder="Messagem"></textarea>
 						</div>
 						<ul class="actions">
-							<li><input value="Send Message" class="button alt" type="submit"></li>
+							<li><input value="Enviar" class="button alt" type="submit"></li>
 						</ul>
 					</form>
 
@@ -94,7 +90,7 @@
 					</ul>
 
 					<div class="copyright">
-						&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+						&copy; copyright - Desenvolvido por Daniel Simões
 					</div>
 
 				</div>
