--- a/index.html
+++ b/index.html
@@ -2,32 +2,26 @@
 
 <html>
 	<head>
-		<title>Dj Queiróz</title>
+		<title>Dj Queir'Oz</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<link rel="stylesheet" href="assets/css/main.css"/>
 	</head>
 	<body>
-
 		<!-- Header -->
-		
 			<header id="header">
-				<div class="logo"><a href="index.html">DJ Queir[oZ] <span>Alegria na Sua Pista</span></a></div>
+				<div class="logo"><a href="index.html">DJ Queir'OZ <span>- Alegria na Sua Pista</span></a></div>
 				<a href="#menu"><span>Menu</span></a>
 			</header>
-
-		<!-- Nav -->
-		
+		<!-- Nav -->		
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Agenda</a></li>
+					<li><a href="elements1.html">Agenda</a></li>
 					<li><a href="elements.html">Músicas</a></li>
 				</ul>
 			</nav>
-
-		<!-- Banner -->
-		
+		<!-- Banner -->		
 			<section id="banner" class="bg-img" data-bg="pista.jpg">
 				<div class="inner">
 					<header>
@@ -36,9 +30,7 @@
 				</div>
 				<a href="#one" class="more">Learn More</a>
 			</section>
-
-		<!-- One -->
-		
+		<!-- One -->	
 			<section id="one" class="wrapper post bg-img" data-bg="historia.jpg">
 				<div class="inner">
 					<article class="box">
@@ -54,31 +46,26 @@
 						</footer>
 					</article>
 				</div>
-				<a href="#two" class="more">Learn More</a>
+				<a href="#two" class="more">Saiba Mais</a>
 			</section>
-
-		<!-- Two -->
-		
+		<!-- Two -->		
 			<section id="two" class="wrapper post bg-img" data-bg="ondeestamos.jpg">
 				<div class="inner">
 					<article class="box">
 						<header>
-							<h2>CASAMENTOS E EVENTOS SOCIAIS</h2>
-							
+							<h2>CASAMENTOS E EVENTOS SOCIAIS</h2>		
 						</header>
 						<div class="content">
 							<p>Diversão com qualidade e profissionalismo.São 10 anos de carreira, mais de 500 casamentos realizados e muita energia para fazer uma festa animada até altas horas! Clique no vídeo para ver uma amostra do trabalho de Ronaldo Gasparian nos casamentos. Cenas reais de festas reais.</p>
 						</div>
 						<footer>
-							<a href="generic.html" class="button alt">saiba Mais</a>
+							<a href="generic1.html" class="button alt">Saiba Mais</a>
 						</footer>
 					</article>
 				</div>
-				<a href="#three" class="more">Learn More</a>
+				<a href="#three" class="more">Saiba Mais</a>
 			</section>
-
-		<!-- Three -->
-		
+		<!-- Three -->	
 			<section id="three" class="wrapper post bg-img" data-bg="corporativo.jpg">
 				<div class="inner">
 					<article class="box">
@@ -90,23 +77,18 @@
 							<p>Hoje em dia, os eventos estão cada vez mais presentes no mundo corporativo. Com a valorização do fator humano, da criatividade e do espírito de grupo, as empresas precisam promover encontros para que haja interação entre essas novas ferramentas de produção: os próprios funcionários e precisa de um DJ com conhecimento e flexibilidade. Ronaldo Gasparian foi o responsável pela trilha de confraternizações, lançamento de produtos e serviços e convenções das principais empresas do mercado.</p>
 						</div>
 						<footer>
-							<a href="generic.html" class="button alt">Saiba Mais</a>
+							<a href="generic2.html" class="button alt">Saiba Mais</a>
 						</footer>
 					</article>
 				</div>
-				<a href="#four" class="more">Learn More</a>
-			</section>
-		
-		<!-- Footer -->
-		
+				<a href="#four" class="more">Saiba Mais</a>
+			</section>	
+		<!-- Footer -->		
 		<section id="four">
 			<footer id="footer">
 				<div class="inner">
-
 					<h2>Contato</h2>
-
 					<form action="#" method="post">
-
 						<div class="field half first">
 							<label for="name">Nome</label>
 							<input name="name" id="name" type="text" placeholder="Nome">
@@ -123,29 +105,29 @@
 							<li><input value="Enviar" class="button alt" type="submit"></li>
 						</ul>
 					</form>
-
 					<ul class="icons">
 						<li><a href="#" class="icon round fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon round fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon round fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
-
 					<div class="copyright">
 						&copy; copyright - Desenvolvido por Daniel Simões
 					</div>
-
 				</div>
 			</footer>
-		</section>
-		
+		</section>		
 		<!-- Scripts -->
-		
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
+
+
+
+
+
+
